Edit footer details

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     </div>
 
     <div class="flex-wrapper">
-      <div class="footer">Copyright &copy; 2024 Sarah Situ</div>
+      <div class="footer">
+        Copyright &copy; 2024 Sarah Situ - Image from FreePik
+      </div>
     </div>
   </body>
 </html>
