Edit photo link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sarah's Blog</title>
   </head>
 
-  <body class="bigbox">
+  <body>
     <h1>Kia ora! Welcome!</h1>
     <h1>Sarah's Blog</h1>
 
