--- a/html-css.html
+++ b/html-css.html
@@ -4,42 +4,74 @@
     <title>HTML & CSS - Sarah Situ</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="../styles/main.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/main.css" rel="stylesheet" />
   </head>
 
   <body>
-    <h1>Learn HTML & CSS</h1>
-    <h2>
-      E kore e mau i a koe, he wae kai pakiaka.
-      <em
-        >A foot accustomed to running over roots makes the speediest runner.</em
-      >
-      (Optional SUB title)
-    </h2>
-    <h3>10 November 2010</h3>
+    <h1>Learn HTML & CSS - ID and Classes</h1>
+    <div class="about-section">
+      <h2>First - What are HTML elements</h2>
+      <p>
+        An HTML element is part of an HTML(Hypertext Markup Language) document
+        which tells a webpage how to structure itself.
+      </p>
+      <p>
+        Some elements include headers, paragraphs, text and images.<br />
+        CSS (Cascading Style Sheet) is a style sheet language used to style
+        elements in HTML documents.
+      </p>
+      <p>
+        CSS can be used to <b>style</b> (control) things like the font, colour,
+        size of text, spacing and positioning of certains elements.
+      </p>
+      <p>
+        CSS selectors are used to identify certain HTML elements which you want
+        to style.
+      </p>
+      <h2>What are ID selectors?</h2>
+      <p>
+        ID attributes allows you to select a single HTML element and modify it
+        with styles using CSS.<br />
+        IDs are unique and only targets a specific element within a page and it
+        is identified with a hash symbol followed with the ID name.
+      </p>
+      <h3>Example of an ID selector in action:</h3>
+      <p>HTML code - ID</p>
+      <img class="htmlcssphoto" src="/mediaforblog/id-1.png" />
+      <p>CSS code - ID</p>
+      <img class="htmlcssphoto" src="/mediaforblog/id-2.png" />
+      <p>What you see!</p>
+      <img class="htmlcssphoto" src="mediaforblog/id-3.png" />
 
-    <p class="about-section">
-      Te Houtaewa was the fastest runner of his day and played many pranks on
-      his peoples enemies. One morning his mother wanted kumara for the hangi
-      (earth oven) and asked Te Houtaewa to go to the gardens at Te Kao, a short
-      distance away. He agreed to fetch the kumara and told his mother to
-      prepare the hangi.<br />
-      <br />
-      <br />
-      Instead of going to the nearby gardens, Te Houtaewa set off for Ahipara as
-      he wanted to annoy some Te Rarawa people who lived there. Carrying two
-      large baskets for the kumara, he ran like the wind, completing the journey
-      over the hard sands of Te Oneroa a Tohe (Ninety Mile Beach) in the few
-      hours it takes a good hangi to heat up properly. On reaching Ahipara, he
-      went straight to the people's kumara pataka (storehouse for the sweet
-      potatoes) situated at the foot of the hill Whangatauatia.
-      <br />
+      <h2>What are class selectors?</h2>
 
-      <br />
-      While Te Houtaewa was filling his baskets with kumara he was spotted
-      stealing the kai (food). He was immediately recognised.
-    </p>
+      <p>
+        Class are reusable styles that can be added to multiple HTML element in
+        a page. <br />It is written with a period followed with the class name.
+      </p>
+      <h3>Example of a Class selector in action:</h3>
+      <p>HTML code - Class</p>
+      <img class="htmlcssphoto" src="/mediaforblog/class-1.png" />
+      <p>CSS code - Class</p>
+      <img class="htmlcssphoto" src="/mediaforblog/class-2.png" />
+      <p>What you see!</p>
+      <img class="htmlcssphoto" src="mediaforblog/class-3.png" />
 
-    <!-- this is a comment. -->
+      <h2>
+        What are the best practices associated with using classes vs. ids?
+      </h2>
+      <p>
+        Classes should be used if there is multiple element which requires the
+        same style to be used more than once within a page or website.
+      </p>
+      <p>
+        ID should be used when you only have one element on the page that is
+        going to take on the style and can't be used more than once.
+      </p>
+      <p>
+        As IDs are also more specific because they only target a single element,
+        they have a higher importance in CSS and take precedence over classes.
+      </p>
+    </div>
   </body>
 </html>
