Add div around images

--- a/html-css.html
+++ b/html-css.html
@@ -37,38 +37,44 @@
       </p>
       <h3>Example of an ID selector in action:</h3>
       <p>HTML code - ID</p>
-      <img class="htmlcssphoto" src="/mediaforblog/id-1.png" />
-      <p>CSS code - ID</p>
-      <img class="htmlcssphoto" src="/mediaforblog/id-2.png" />
-      <p>What you see!</p>
-      <img class="htmlcssphoto" src="mediaforblog/id-3.png" />
+      <div class="container img">
+        <img src="/mediaforblog/id-1.png" />
+        <p>CSS code - ID</p>
+        <img src="/mediaforblog/id-2.png" />
 
-      <h2>What are class selectors?</h2>
+        <p>What you see!</p>
+        <img src="mediaforblog/id-3.png" />
 
-      <p>
-        Class are reusable styles that can be added to multiple HTML element in
-        a page. <br />It is written with a period followed with the class name.
-      </p>
-      <h3>Example of a Class selector in action:</h3>
-      <p>HTML code - Class</p>
-      <img class="htmlcssphoto" src="/mediaforblog/class-1.png" />
-      <p>CSS code - Class</p>
-      <img class="htmlcssphoto" src="/mediaforblog/class-2.png" />
-      <p>What you see!</p>
-      <img class="htmlcssphoto" src="mediaforblog/class-3.png" />
+        <h2>What are class selectors?</h2>
+
+        <p>
+          Class are reusable styles that can be added to multiple HTML element
+          in a page. <br />It is written with a period followed with the class
+          name.
+        </p>
+
+        <h3>Example of a Class selector in action:</h3>
+        <p>HTML code - Class</p>
+
+        <img src="/mediaforblog/class-1.png" />
+
+        <p>CSS code - Class</p>
+
+        <img src="/mediaforblog/class-2.png" />
+
+        <p>What you see!</p>
+
+        <img src="mediaforblog/class-3.png" />
+      </div>
 
       <h2>
         What are the best practices associated with using classes vs. ids?
       </h2>
       <p>
         Classes should be used if there is multiple element which requires the
-        same style to be used more than once within a page or website.
-      </p>
-      <p>
+        same style to be used more than once within a page or website.<br />
         ID should be used when you only have one element on the page that is
-        going to take on the style and can't be used more than once.
-      </p>
-      <p>
+        going to take on the style and can't be used more than once.<br />
         As IDs are also more specific because they only target a single element,
         they have a higher importance in CSS and take precedence over classes.
       </p>
