--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head class="banner">
     <meta chartset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="/styles/main.css" type="text/css" />
     <title>Sarah's Blog</title>
   </head>
 
