--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
     </div>
 
     <div class="flex-wrapper">
-      <div class="footer">
-        Copyright &copy; 2024 Sarah Situ - Image from FreePik
-      </div>
+      <div class="footer">2024 Sarah Situ - Image from FreePik</div>
     </div>
   </body>
 </html>
