Edit beginning of home blogpage description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
     <div class="aboutme">
       <p>This is the beginning of my website home page.</p>
-      <p>It will eventually contain a list of links to all my blogs.</p>
+      <p>
+        It will eventually contain a list of links to all my blog entries.<br />
+        This will be updated weekly!
+      </p>
     </div>
 
     <!-- Tab links -->
