Edit typo in About Me section

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       <h1>About Me</h1>
       <p class="first">
         Hi I'm Sarah! I'm from Wellington. <br />
-        In my spare time you can either find me out for a run, salsa dancing or
-        reading. These some of things that make me happy. <br />I like trying
-        new things and setting little goals to keep me going through the
+        In my spare time you can either find me outside going for a run, dancing
+        salsa or reading. These some of things that make me happy. <br />I like
+        trying new things and setting little goals to keep me going through the
         year.<br />
         This blog is going to be dedicated to my learning journey at Dev Academy
         and becoming a future software developer.
