Added more information in About Me

--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@
       <h1>About Me</h1>
       <p class="first">
         Hi I'm Sarah! I'm from Wellington. <br />
-        In my spare time you can either find me outside going for a run, dancing
-        salsa or reading. These some of things that make me happy. <br />I like
-        trying new things and setting little goals to keep me going through the
-        year.<br />
+        I did a BSc in Microbiology and worked in a lab for awhile doing food
+        testing.<br />
+        Decided it was not the career I wanted to move forward in and here I am,
+        in a career change!<br />
+        <br />In my spare time you can either find me outside going for a run,
+        dancing salsa or reading. These some of things that make me happy.
+        <br />I like trying new things and setting little goals to keep me going
+        through the year.<br /><br />
         This blog is going to be dedicated to my learning journey at Dev Academy
         and becoming a future software developer.
         <br />
