--- a/learning-plan.html
+++ b/learning-plan.html
@@ -6,40 +6,119 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="../styles/main.css" rel="stylesheet" type="text/css" />
   </head>
-
   <body>
-    <h1>Learning Plan</h1>
-    <h2>
-      E kore e mau i a koe, he wae kai pakiaka.
-      <em
-        >A foot accustomed to running over roots makes the speediest runner.</em
-      >
-      (Optional SUB title)
-    </h2>
-    <h3>10 November 2010</h3>
+    <h1>Sarah's Blog</h1>
+    <h2>Learning Plan</h2>
 
-    <p class="about-section">
-      Te Houtaewa was the fastest runner of his day and played many pranks on
-      his peoples enemies. One morning his mother wanted kumara for the hangi
-      (earth oven) and asked Te Houtaewa to go to the gardens at Te Kao, a short
-      distance away. He agreed to fetch the kumara and told his mother to
-      prepare the hangi.<br />
-      <br />
-      <br />
-      Instead of going to the nearby gardens, Te Houtaewa set off for Ahipara as
-      he wanted to annoy some Te Rarawa people who lived there. Carrying two
-      large baskets for the kumara, he ran like the wind, completing the journey
-      over the hard sands of Te Oneroa a Tohe (Ninety Mile Beach) in the few
-      hours it takes a good hangi to heat up properly. On reaching Ahipara, he
-      went straight to the people's kumara pataka (storehouse for the sweet
-      potatoes) situated at the foot of the hill Whangatauatia.
-      <br />
+    <div class="about-section">
+      <h3>1. What is your long term goal or career pathway</h3>
+      <p>
+        Find a career in the software development industry when I finish up at
+        Dev Academy. I know that there many areas you can go into.<br>
+        I hope I can discover my niche and find work at place where I have more flexibility and continue
+        to grow in my learning.<br />
+        Not too sure what projects I want to work in the future yet.<br />
+        Maybe developing and working on applications or apps where I am helping
+        communities grow or a service that is meaningful and improves people’s
+        lives.
+      </p>
 
-      <br />
-      While Te Houtaewa was filling his baskets with kumara he was spotted
-      stealing the kai (food). He was immediately recognised.
-    </p>
+      <h3>
+        2. A description of your strengths and limitations when it comes to
+        learning
+      </h3>
+      <p>
+        Some strengths I have are that I am a patience person and if I have my
+        eyes set on a task I can be quite determined to finish it.<br />
+        I am pretty optimistic and try to see the best in all situations.<br />
+        I think it is important to shift our mindset to see the good to help us
+        more confident and happy, but also it doesn’t mean we completely ignore
+        reality.</p>
+        <p>
+        Limitations: Not as confident to say something when I don’t know the
+        answer or struggling.<br />I can be caught up with something because I
+        want it to be perfect.<br />
+        I need to embrace “Done is better than perfect” because there is always
+        room for improvement.</p>
+      </p>
+      <h3>
+        3. What skills (non-technical core/human skills) would you like to see
+        developed in yourself while at Dev Academy?
+      </h3>
+      <p>
+        - how to communicate better with others and be more engaging to relate -
+        Be more creative - Try to be more curious and ask questions in general
+      </p>
 
-    <!-- this is a comment. -->
+      <h3>
+        4. A commitment to how you will manage your workload in this programme.
+        <br />This should include:<br />
+        <h4>
+          An explanation of how you will manage yourself to work productively
+          and safely with other learners, Facilitators and industry/community
+          representatives
+        </h4>
+      </h3>
+      <p>
+        To make sure that I am working productively throughout the course I will
+        be more strict in reinforcing the time blocks suggested for each task.<br>
+        Try to take breaks often between studying and to plan my week and work
+        around personal commitments.<br>
+        Work out what days I will work on a certain
+        section of the sprint and make sure I’m putting in the suggested hours of
+        work required each week.<br>
+        Make sure I’m also looking after myself getting enough sleep to reduce stress so I can be at my best to
+        learn and engage with the other learners, facilitators and people around
+        me.
+      </p>
+
+      <h4>
+        - What you will do when things are building up and starting to get to
+        you
+      </h4>
+      <p>
+        Assess what is the best solution: If I am behind on sprint material,
+        contact facilitator for an extension or advice for recommendation on how
+        to approach.<br />
+        Prioritise the most important tasks. Prioritise mental health, sleep and
+        nutrition.<br />
+        Consider dropping some personal commits that are less important as a
+        last resort for the time being to focus on myself.
+      </p>
+      <h3>
+        5. A commitment as to how and where you will seek help in a timely way
+      </h3>
+      <p>
+        If I'm struggling with a material I will seek help from the facilitators
+        or the other students on the discord channel.<br />
+        Setting a time limit when I am struggling with a problem and being aware
+        so I can take a break or ask others for help.<br />
+        Seek information or tutorials online if no one is available.
+      </p>
+      <h3>6. A description of what you expect from the Facilitation team</h3>
+      <p>
+        To be understanding that we are learning new content at a considerably
+        fast pace and sometimes we don’t know what to ask because we don’t
+        know.<br />
+        Try to guide us when we ask for help for a question or trying to
+        understand a concept.<br />
+        Be supportive and friendly; which has been so far, and everyone on the
+        channel is super responsive and engaging.
+      </p>
+      <h3>
+        3. Any scheduling information such as block-out times when you are
+        committed to other things.<br />
+        For example, you might have whānau commitments like school drop-offs.
+        It's important to plan these in.
+      </h3>
+      <p>
+        I don’t have any major commitments so I am pretty flexible during this
+        period.<br />
+        I do have dance classes that I try to attend weekly and running or
+        workout sessions that I have throughout the week.<br />
+        I will try keep these personal commitments as I believe it is important
+        to have a balance of study and personal life.
+      </p>
+    </div>
   </body>
 </html>
