Changed (aboutme) into h3 headings

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <h1>Sarah's Blog</h1>
 
     <div class="aboutme">
-      <p>This is the beginning of my website home page.</p>
-      <p>
+      <h3>
+        This is the beginning of my website home page.<br />
         It will eventually contain a list of links to all my blog entries.<br />
         This will be updated weekly!
-      </p>
+      </h3>
     </div>
 
     <!-- Tab links -->
