changed aboutme class name to intro

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       >
     </div>
     
-    <div class="aboutme">
+    <div class="intro">
       <h3>
         This is the beginning of my website home page.<br />
         It will eventually contain a list of links to all my blog entries.<br />
