edit paragraph breaks

--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
       <p>
         Hi I'm Sarah! I'm from Wellington. I did a BSc in Microbiology and
         worked in a lab for awhile doing food testing.
-        <br>Decided it was not the career I wanted to move forward in and here I am,
+        Decided it was not the career I wanted to move forward in and here I am,
         in a career change!</p>
         <p>In my spare time you can either find me outside going for a run,
-        dancing salsa or reading.<br>
-        These some of things that make me happy.
+        dancing salsa or reading.These some of things that make me happy.<br>
         I like trying new things and setting little goals to keep me going
         through the year.</p>
         <p>This blog is going to be dedicated to my learning journey at Dev Academy
