--- a/learning-plan.html
+++ b/learning-plan.html
@@ -16,7 +16,8 @@
         Find a career in the software development industry when I finish up at
         Dev Academy. I know that there many areas you can go into.<br>
         I hope I can discover my niche and find work at place where I have more flexibility and continue
-        to grow in my learning.<br />
+        to grow in my learning.</p>
+        <p>
         Not too sure what projects I want to work in the future yet.<br />
         Maybe developing and working on applications or apps where I am helping
         communities grow or a service that is meaningful and improves people’s
@@ -46,27 +47,29 @@
         developed in yourself while at Dev Academy?
       </h3>
       <p>
-        - how to communicate better with others and be more engaging to relate -
-        Be more creative - Try to be more curious and ask questions in general
+        - How to communicate better with others and be more engaging.<br>
+        - Be more creative.<br>
+        - Try to be more curious and ask questions in general.<br>
       </p>
 
       <h3>
         4. A commitment to how you will manage your workload in this programme.
         <br />This should include:<br />
         <h4>
-          An explanation of how you will manage yourself to work productively
+          - An explanation of how you will manage yourself to work productively
           and safely with other learners, Facilitators and industry/community
           representatives
         </h4>
       </h3>
       <p>
         To make sure that I am working productively throughout the course I will
-        be more strict in reinforcing the time blocks suggested for each task.<br>
+        be more strict in reinforcing the time blocks suggested for each task.
         Try to take breaks often between studying and to plan my week and work
-        around personal commitments.<br>
+        around personal commitments.</p>
+        <p>
         Work out what days I will work on a certain
         section of the sprint and make sure I’m putting in the suggested hours of
-        work required each week.<br>
+        work required each week.
         Make sure I’m also looking after myself getting enough sleep to reduce stress so I can be at my best to
         learn and engage with the other learners, facilitators and people around
         me.
