Fixed page links

--- a/index.html
+++ b/index.html
@@ -14,30 +14,34 @@
 <!--Responsive Topnav  -->
 
 <div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
-  <a href="blog/te-houtaewa-template.html">Te Houtaewa</a>
-  
+  <a href="/index.html " class="active">Home</a>
+  <a href="/blog/te-houtaewa-template.html">Te Houtaewa</a>
+
   <div class="dropdown">
-    <button class="dropbtn">Tech
+    <button class="dropbtn">
+      Tech
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="html-css.html">Learn HTML & CSS</a>
-      <a href="javascript-dom.html">JavaScript & DOM</a>
+      <a href="/html-css.html">Learn HTML & CSS</a>
+      <a href="/javascript-dom.html">JavaScript & DOM</a>
       <a href="#">Link 3</a>
     </div>
   </div>
   <div class="dropdown">
-    <button class="dropbtn">Core
+    <button class="dropbtn">
+      Core
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="identity-values.html">Identity Values</a>
-      <a href="learning-plan.html">Learning Plan</a>
-      <a href="emotional-intelligence.html">Emotional Intelligence</a>
+      <a href="/identity-values.html">Identity Values</a>
+      <a href="/learning-plan.html">Learning Plan</a>
+      <a href="/emotional-intelligence.html">Emotional Intelligence</a>
     </div>
   </div>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()"
+    >&#9776;</a
+  >
 </div>
  <!-- --> 
 
