Add css to center images

--- a/html-css.html
+++ b/html-css.html
@@ -70,12 +70,12 @@
       <h3>Example of an ID selector in action:</h3>
       <p>HTML code - ID</p>
       <div class="container img">
-        <img src="/mediaforblog/id-1.png" />
+        <img src="/mediaforblog/id-1.png" class="center" />
         <p>CSS code - ID</p>
-        <img src="/mediaforblog/id-2.png" />
+        <img src="/mediaforblog/id-2.png" class="center" />
 
         <p>What you see!</p>
-        <img src="mediaforblog/id-3.png" />
+        <img src="mediaforblog/id-3.png" class="center" />
 
         <h2>What are class selectors?</h2>
 
@@ -88,15 +88,15 @@
         <h3>Example of a Class selector in action:</h3>
         <p>HTML code - Class</p>
 
-        <img src="/mediaforblog/class-1.png" />
+        <img src="/mediaforblog/class-1.png" class="center" />
 
         <p>CSS code - Class</p>
 
-        <img src="/mediaforblog/class-2.png" />
+        <img src="/mediaforblog/class-2.png" class="center" />
 
         <p>What you see!</p>
 
-        <img src="mediaforblog/class-3.png" />
+        <img src="mediaforblog/class-3.png" class="center" />
       </div>
 
       <h2>
