Updated link to page neuroplasticity

--- a/emotional-intelligence.html
+++ b/emotional-intelligence.html
@@ -32,6 +32,7 @@
         <a href="/identity-values.html">Identity Values</a>
         <a href="/learning-plan.html">Learning Plan</a>
         <a href="/emotional-intelligence.html">Emotional Intelligence</a>
+        <a href="/sarah-situ.github.io/neuroplasticity.html">Neuroplasticity & Mindset</a>
       </div>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()"
