--- a/neuroplasticity.html
+++ b/neuroplasticity.html
@@ -32,11 +32,10 @@
         <a href="/identity-values.html">Identity Values</a>
         <a href="/learning-plan.html">Learning Plan</a>
         <a href="/emotional-intelligence.html">Emotional Intelligence</a>
-        <a href="/neuroplasticity.html">Emotional Intelligence</a>
+        <a href="/sarah-situ.github.io/neuroplasticity.html">Emotional Intelligence</a>
       </div>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()"
-      >&#9776;</a
     >
   </div>
   <!-- -->
