Add links to problem solving and te whare tapa wha blog pages

--- a/html-css.html
+++ b/html-css.html
@@ -20,7 +20,7 @@
       <div class="dropdown-content">
         <a href="/html-css.html">Learn HTML & CSS</a>
         <a href="/javascript-dom.html">JavaScript & DOM</a>
-        <a href="#">Link 3</a>
+        <a href="/problem-solving.html">Problem Solving</a>
       </div>
     </div>
     <div class="dropdown">
@@ -35,6 +35,7 @@
         <a href="/sarah-situ.github.io/neuroplasticity.html"
           >Neuroplasticity & Mindset</a
         >
+        <a href="/te-whare-tapa-wha.html">Te Whare Tapa Wha</a>
       </div>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()"
