--- a/emotional-intelligence.html
+++ b/emotional-intelligence.html
@@ -20,7 +20,7 @@
       <div class="dropdown-content">
         <a href="/html-css.html">Learn HTML & CSS</a>
         <a href="/javascript-dom.html">JavaScript & DOM</a>
-        <a href="#">Link 3</a>
+        <a href="/problem-solving.html">Problem Solving</a>
       </div>
     </div>
     <div class="dropdown">
@@ -33,6 +33,7 @@
         <a href="/learning-plan.html">Learning Plan</a>
         <a href="/emotional-intelligence.html">Emotional Intelligence</a>
         <a href="/sarah-situ.github.io/neuroplasticity.html">Neuroplasticity & Mindset</a>
+        <a href="/te-whare-tapa-wha.html">Te Whare Tapa Wha</a>
       </div>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()"
