--- a/neuroplasticity.html
+++ b/neuroplasticity.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Emotional Intelligence - Sarah's Blog</title>
+    <title>Neuroplasticity & Mindset - Sarah Situ</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="../styles/main.css" rel="stylesheet" type="text/css" />
+    <link href="styles/main.css" rel="stylesheet" type="text/css" />
   </head>
   <!--Responsive Topnav  -->
 
   <div class="topnav" id="myTopnav">
-    <a href="/index.html " class="active">Home</a>
+    <a href="/index.html" class="active">Home</a>
     <a href="/blog/te-houtaewa-template.html">Te Houtaewa</a>
 
     <div class="dropdown">
@@ -20,7 +20,7 @@
       <div class="dropdown-content">
         <a href="/html-css.html">Learn HTML & CSS</a>
         <a href="/javascript-dom.html">JavaScript & DOM</a>
-        <a href="#">Link 3</a>
+        <a href="/problem-solving.html">Problem Solving</a>
       </div>
     </div>
     <div class="dropdown">
@@ -32,15 +32,95 @@
         <a href="/identity-values.html">Identity Values</a>
         <a href="/learning-plan.html">Learning Plan</a>
         <a href="/emotional-intelligence.html">Emotional Intelligence</a>
-        <a href="/sarah-situ.github.io/neuroplasticity.html">Emotional Intelligence</a>
+        <a href="/neuroplasticity.html">Neuroplasticity & Mindset</a>
+        <a href="/te-whare-tapa-wha.html">Te Whare Tapa Wha</a>
       </div>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()"
+      >&#9776;</a
     >
   </div>
   <!-- -->
   <body>
-    <h1>Text</h1>
-    <div class="about-section"></div>
+    <h1>Sarah's Blog</h1>
+    <h2>Neuroplasticity & Mindset</h2>
+
+    <div class="about-section">
+      <h3>
+        ### • Discuss how understanding the principles of neuroplasticity
+        benefits people. Neuroplasticity is the process where the brain forms
+        new neurons and create new pathways with these neurons. In response to
+        learning, these new neural pathways are the brain’s way of changing and
+        organising new information to build further connections. While at a
+        younger age we tend to be more responsive to learning and this is the
+        period where the brain has a rapid ground in neurons and there are
+        around 15,000 connections(synapses)(2) per neurons in the brains of an
+        average three year old. As an average adult we have half of these
+        numbers, because as we age we experience something called synaptic
+        pruning. This is because we gain new experiences, we build and
+        strengthen connections and some are removed. However neuroplasticity is
+        an ongoing process and everyone can benefit from it. Brain development
+        does not stop after early childhood, but it is the foundation upon which
+        the brain continues developing. (3). The brain is adaptable and
+        continues to change throughout our lives. The more we practice
+        something, the brain continues to strengthen and build new pathways for
+        a new habit or if you are learning a new language. **10 Principles of
+        Neuroplasticity: Part 1**
+        [https://www.cfimove.org/10-principles-of-neuroplasticity-part-1/#:~:text=It
+        is also the mechanism,to repeat the learned
+        behavior](https://www.cfimove.org/10-principles-of-neuroplasticity-part-1/#:~:text=It%20is%20also%20the%20mechanism,to%20repeat%20the%20learned%20behavior).
+        https://www.verywellmind.com/what-is-brain-plasticity-2794886
+        (2)https://extension.umaine.edu/publications/4356e/ (3)
+        https://extension.umaine.edu/publications/4356e/ ## • Discuss how you
+        might engage with the principles of neuroplasticity for your benefit.
+        https://accelerate.uofuhealth.utah.edu/resilience/neuroplasticity-how-to-use-your-brain-s-malleability-to-improve-your-well-being
+        Knowing that fact that you can change your brain, you can learning
+        something new with some repetition and patience is helpful. This website
+        talks about how there are five components to a neuroplastic change. 1.
+        Challenge & Novelty You look for a skill that is new to you and not too
+        easy to learn. We need a certain degree of challenge for cognitive
+        change. For me that would be learning software development at Dev
+        Academy. I have no prior background in this area and it is big learning
+        curve, however I am constantly learning and being challenged. 2.
+        Intention The skill you are practicing / learning must have some level
+        of importance to you. Neuoplastic change is associated with 3. Specific
+        Attention Have a plan and schedule time to give this task your focus.
+        Giving specific focus to your new skill can increase higher changes of
+        change. Setting goals is along the way is helpful. 4. Repetition &
+        Intensity Making sure you following your plan, having constant
+        repetition (and upper the intensity if required) is needed to creating
+        new connections. 5. Time Giving yourself time for the change to occur.
+        It is normal for you to lose focus, be patient and adjust your plan and
+        keep on going. ## • What are some of the ways to increase your
+        neuroplasticity? Some things that can increase neuroplasticity: -
+        Exercise - Mediation - Learning a new skill (eg a new language, hobby) -
+        Making/ listening to music - Travel
+        https://www.medicalnewstoday.com/articles/neuroplasticity-exercises#language
+        ## • Link to a resource that you found particularly useful or engaging.
+        ## 2. Researching Growth Mindset ## Discuss what it is and why it is
+        relevant. Growth mindset is the belief that learning and abilities is
+        not set in stone. People with this mindset see challenges as a goal,
+        skills can be learnt, set back can be overcome with time. ## In this
+        exploration, did anything surprise you? Change for you?
+        https://onedublin.org/2012/06/19/stanford-universitys-carol-dweck-on-the-growth-mindset-and-education/
+        ## How will you integrate growth mindset into your learning journey?Link
+        to a resource that you found particularly useful or engaging.
+        https://www.understood.org/en/articles/growth-mindset One thing I've
+        learnt is that growth mindset is not just about being positive. Learning
+        from feedback, experience and finding ways to improve. Praise also
+        doesn't build this mindset, it is where we praise,eg how a problem was
+        solved and not how success they are. **Myth 2: Growth mindset is about
+        being positive.** It’s more than that. Growth mindset means taking
+        feedback, learning from experience, and coming up with strategies for
+        improving. **Myth 3: Praise builds a growth mindset.** It
+        depends *what* you’re praising. The important thing is how a person
+        approached a challenge, not how hard they worked, or how successful they
+        were. ## **Blend with your learning plan and strategies** ## Reflect and
+        discuss how these understandings may shape or influence your learning
+        plan and strategy. It’s important to remember that setbacks can actually
+        provide a way forward.
+        https://www.understood.org/en/articles/the-importance-of-self-advocacy
+      </h3>
+    </div>
   </body>
 </html>
