--- a/te-whare-tapa-wha.html
+++ b/te-whare-tapa-wha.html
@@ -51,10 +51,10 @@
       </div>
       <div class="grid-item">
         <p>
-          Making sure I get at least 8 hours of sleep<br />Getting some movement
-          in each day ( at least short walk to get some fresh air and sun)<br />Limit
-          caffeine and have healthy food in general<br />Go to gym or a run in
-          if I can
+          Making sure I get at least 8 hours of sleep.<br />Getting some
+          movement in each day. (at least short walk to get some fresh air and
+          sun)<br />Limit caffeine and have healthy food in general.<br />Go to
+          gym or a run in if I can.
         </p>
       </div>
       <div class="grid-item">
@@ -62,7 +62,7 @@
       </div>
       <div class="grid-item">
         <p>
-          Reducing screen time<br />Reading something I enjoy.<br />Making time
+          Reducing screen time.<br />Reading something I enjoy.<br />Making time
           to relax and unwind.<br />Doing activities that are fun! e.g
           dancing<br />
           Keeping my space tidy - declutter.
@@ -83,8 +83,8 @@
       </div>
       <div class="grid-item">
         <p>
-          Keeping in touch with friends and family/<br />Make time to catch up
-          withpeople in the weekend.
+          Keeping in touch with friends and family.<br />Make time to catch up
+          with people in the weekend.
         </p>
       </div>
       <div class="grid-item">
@@ -92,7 +92,7 @@
       </div>
       <div class="grid-item">
         <p>
-          Appreciating the land and nature around me.<br />Walk along the beach
+          Appreciating the land and nature around me.<br />Walk along the beach.
         </p>
       </div>
     </div>
