Updated learning plan for bootcamp

--- a/learning-plan.html
+++ b/learning-plan.html
@@ -42,9 +42,65 @@
   <!-- -->
   <body>
     <h1>Sarah's Blog</h1>
-    <h2>Learning Plan</h2>
 
     <div class="about-section">
+      <h2>Learning Plan - Bootcamp </h2>
+      <p>20 April 2024</p>
+      <h3>1. What is your long term goal or career pathway</h3>
+      <p>
+        I hope I can use the skills I've gained from this course to find a career in the software development industry.
+        I want to work at place where I have flexibility and growth.
+        </p>
+        <p>
+        Still not too sure what projects I want to work on yet, still thinking about it.<br />
+        Definitely something where I am contributing to work that helps to improve people's lives and brings people together, that kind of thing.
+      </p>
+
+      <h3>
+        2. A description of your strengths and limitations when it comes to
+        learning
+      </h3>
+      <p>
+        I have discovered that my focus isn't entirely the greatest, so it is something I have to work on building up and using tools like the pomodoro timer to keep me on track.
+        Once I stuck on a task, I get into the zone that is fine.<br>
+      I'm less likely to ask for help, I need to reach out more often to the facilitators and peers. I hope I can push myself more in this aspect.<br>
+      I want to be more organised for bootcamp, for foundations I still found it challenging to keep on top of things. Knowing that bootcamp will be more intense and hands on, I want to be prepared.
+    </p>
+      </p>
+      <h3>
+        3. What skills (non-technical core/human skills) would you like to see
+        developed in yourself while at Dev Academy?
+      </h3>
+      <p>
+        Non-techinical<br>
+        - Staying focus for the nine weeks, in thriving not surviving mod.<br>
+        - Staying on top of the material.<br>
+        - Try to be more curious and ask questions in general.<br>
+        - Working on my public speaking, aka speaking in front of the group (presentations).</p>
+        <p>
+          Human skills<br>
+          - Improving my self-awareness <br>
+          - Working on my reflective skills<br>
+          - Developing more leadership skills<br>
+          - Giving and receiving feedback
+          
+      </p>
+<h3>What are your expectations from the Bootcamp team?</h3>
+<p>It hasn't really changed from my first learning plan, but it would be to push and guide us into the right direction.<br>
+  With the one on one check ins: Technical check ins - gauge where my technical progress is at currently and areas that I need to improve on. 
+  
+<h3>What are your expectations of yourself on Bootcamp</h3>
+<p>I want to make sure that I prioritise my sleep and wellbeing so that i can function at bootcamp to the best of my ability.
+  I know that some of my hobbies will take a hit but i hope can stay on top of things so i can still have some balance.
+  Being organised and planning out my week will hopefully help me feel less stressed. Incorporating exercise into my routine to help me destress.
+  Getting up early to get work done as I have found that I work best mostly in the mornings and early afternoons.
+  Communicating with Bootcamp team if I am falling behind or need help as soon as I realise, especially since there is pair and group programming work involved, how i work will affect others.
+  
+</p>
+    </div>
+    <br><br>
+    <div class="about-section">
+      <h2>Learning Plan - Foundations</h2>
       <h3>1. What is your long term goal or career pathway</h3>
       <p>
         Find a career in the software development industry when I finish up at
